[package]
name = "vibrator"
version = "0.1.0"
edition = "2024"

[dependencies]
atspi-connection = "0.3"
atspi-proxies = "0.3"
atspi-common = "0.3"
tokio = { version = "1.0", features = ["full"] }
tts = "0.26"
futures-util = "0.3"
anyhow = "1.0"
zbus = "3.15.2"
serde = { version = "1.0.228", features = ["derive"] }






